<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exam.jcdongalen.movieviewer.Fragments.SeatMap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTitleArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theater" />

                <TextView
                    android:id="@+id/tvTheaterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSpinnerArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:weightSum="11"
                android:background="@color/colorPrimary"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llTitleArea">

                <Spinner
                    android:id="@+id/sDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_weight="4"/>

                <Spinner
                    android:id="@+id/sCinema"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_weight="4"/>

                <Spinner
                    android:id="@+id/sTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLegendArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="3sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/llSpinnerArea"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:background="@color/colorAvailable"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3sp"
                    android:text="@string/available"/>

                <TextView
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:background="@color/colorReserved"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3sp"
                    android:text="@string/reserved"/>

                <TextView
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:gravity="center"
                    android:background="@mipmap/ic_check"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3sp"
                    android:text="@string/selected"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSeatMapArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/llAmountArea"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llLegendArea">

                <FrameLayout
                    android:id="@+id/frmSeatMap"
                    android:layout_marginTop="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAmountArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="Php 0.00"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>
